Populate genres with migration. Populate Details.cshtml. Extend list in Index. Fix alignment in html ul list.

--- a/Vidly_with_account_controller/Vidly/Vidly/Content/bootstrap-lumen.css
+++ b/Vidly_with_account_controller/Vidly/Vidly/Content/bootstrap-lumen.css
@@ -223,7 +223,7 @@ table {
 
 td,
 th {
-	padding: 0;
+	padding: 11px;
 }
 
 @media print {
@@ -686,8 +686,10 @@ a.bg-danger:hover {
 
 ul,
 ol {
+	list-style-type: none;
 	margin-top: 0;
 	margin-bottom: 10px;
+	padding-left: 0;
 }
 
 	ul ul,
